# TrustSkill

./: CLAUDE.md  README.md  conductor.json  main.py  pyproject.toml
docs/: README.md  agent-skills-format.md  development-plan.md  llm-security-guide.md
docs/plans/: 2026-01-15-cli-enhancement-design.md
examples/ast_test/javascript-eval/: SKILL.md
examples/ast_test/python-eval/: SKILL.md
examples/ast_test/python-false-positive/: SKILL.md
examples/ast_test/python-subprocess/scripts/: run.py
examples/ast_test/shell-basic/: SKILL.md
examples/ast_test/shell-complex/scripts/: complex.sh
examples/ast_test/shell-safe/scripts/: safe.sh
examples/malicious/command-injection-skill/: SKILL.md
examples/malicious/command-injection-skill/scripts/: malicious.sh
examples/malicious/data-exfiltration-skill/: SKILL.md
examples/malicious/file-deletion-skill/: SKILL.md
examples/malicious/file-deletion-skill/scripts/: destroy.sh
examples/safe/hello-world-skill/: SKILL.md
src/: __init__.py  config.py  parser.py  scanner.py  types.py
src/analyzers/: __init__.py  ast_analyzer.py  base.py  regex_analyzer.py
src/ast_parsers/: __init__.py  base.py  javascript_parser.py  python_parser.py  shell_parser.py
src/formatters/: __init__.py  base.py  json_formatter.py  markdown_formatter.py  rich_formatter.py
src/rules/: __init__.py
src/rules/ast/: __init__.py  javascript_injection.py  python_injection.py  shell_injection.py
src/rules/regex/: __init__.py  command_injection.py  file_operations.py  network_security.py  sensitive_data.py
tests/: compare_analyzers.py
(+1 files in other folders)
